# CoarseAIR-PostProcess

./: .gitignore  README.md
CompileTrajs/: .gitignore  CMakeLists.txt  Run_case.sh  build.sh  make_cmake.sh
CompileTrajs/Input_files/: Files.inp
CompileTrajs/src/: Combine_Output.cpp  CompileTrajs.cpp  Global.h  Input_Class.cpp  Input_Class.h  Logger.h  Main.h  Statistics.cpp  Statistics.h  Trajectory.cpp  Trajectory.h
Dissociation/: Find_Diss.py  Plot_Diss_rates.py  Plot_Traj_PaQ.py  Verify_Initial_Distrib.py  Verify_impact_param.py
Scripts/: Calculate_Opacity.py  Calculate_Opacity.sh  Determine_Path_PaQ.py  Find_QB_limit.py  Find_bound.py  Gen_internal_energy_dist.py  Gen_vj_dist.py  Plot_Opacity.py  Plot_Prob_bar.py  Prob_vs_omega.py  README.md  System.py
Statistics/: .gitignore  CMakeLists.txt  Run_case.sh  make_cmake.sh
Statistics/Input_files/: Stat_Input.inp
Statistics/misc/: Collect-Rates.py  Collect.sh
Statistics/src/: Find_length.cpp  Global.h  Input_Class.cpp  Input_Class.h  Main.cpp  Main.h  Reactions.cpp  Reactions.h  Statistics.cpp  Statistics.h
